End Of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dbucktz47",
+    "ApiKey": "824695398214876",
+    "ApiSecret": "jQ1UW22gioZ7USWvBuEGiua4eVA"
+  }
 }
